k8s-deploy-config/k8s_hx_deploy.yml
# Specifies what version of K8s you want to use
apiVersion: v1
# A service is used to expose your Deployment to the external access
kind: Service
metadata:
  name: psicquic-webservice-service
spec:
  ports:
    - port: 31238
      protocol: TCP
      # The port which will be externally exposed. Must be in the range [30000, 32767].
      nodePort: 31238
      # The port on your Deployment which it will expose
      targetPort: 8080
  selector:
    # Selects the disease-portal-client Deployment to attach the Service to
    app: psicquic-webservice
    # Tell K8s this wants to expose an external port
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psicquic-webservice-deployment
spec:
  selector:
    matchLabels:
      app: psicquic-webservice
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: psicquic-webservice
    spec:
      securityContext:
        runAsUser: 2799
        runAsGroup: 1137
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
        - name: psicquic-webservice
          # Pull the image which contains psicquic-webservice webservice and the built assets from EBI's dockerhub
          image: <CONTAINER_IMAGE>
          ports:
            # We are using psicquic-webservice webservice config which serves on port 8080
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: nfs-rw-volume
              mountPath: /nfs/public/rw/intact
      volumes:
        - name: nfs-rw-volume
          nfs:
            # URL for the NFS server
            server: hx-isi-srv-vlan157.ebi.ac.uk
            path: /ifs/public-r/rw/intact
      imagePullSecrets:
        # Provided by GitLab, this allows K8s to connect to dockerhub.ebi.ac.uk
        - name: gitlab-registry
